# deeprad_dataset_explorer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
annotators/: label_annotator.py  segmentation_annotator.py
dataset/: __init__.py  coco.py  dataset.py  semantic_masks.py  yolov8.py
datasets/: __init__.py  dataset.py  yolov8_adapter.py
